--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" lang="en">
   <title>About Me</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <script src="js/app.js"></script>
 </head>
 <body>
   <header>
     <h1>About Me</h1>
   </header>
-  <main>
-    <section>
-      <article>
-        <h2>A little bit about me</h2>
-        <p>My name is Calvin Hall. I would describe myself as a junior Java developer.
-          I've got about 9 years experience working with Java, since early middleschool.
-          I got into programming because of runescape bots. Back during all the botting rage,
-          I decided to try and make my own by piecing other mods together into a "frankenstein"
-          amalgamation of different code scraps.
-          I never really enjoyed web development, as I always thought it was more about making a pretty
-          design than solving actual issues.
-        </p>
-        <div id="wrapper"><input id="quizbutton" type="button" value="Take Quiz" onclick="quiz();" /></div>
-      </article>
-      <br>
-      <article>
-        <h2>User Stories</h2>
-        <p>I'd like to start this out by saying I'm not EXACTLY sure what to do here. The lab 2 documentation was not very explicit on what
-          exactly to put on this webpage, and on asking the instructor, he said I should implement the "user stories" listed on the lab 2 documentation. So here they are...</p>
-          <br>As a student, I want to create an About Me page as a demonstration of my skills with HTML.
-          <br>As an eventual jobseeker, I want to get practice in creating a portfolio page so that I can make myself appealing to potential employers.
-          <br>As an eventual jobseeker, I would like for potential employers to quickly learn a few things about me, such as a short bio, my education, an overview of my job experience, and my goals.
-          <br>As a fun-loving human being, I want to give the visitors to my About Me page a guessing game that shows how fun-loving and interesting I am, and maybe include things about myself that would not ordinarily appear in a portfolio page.
-          <br>As a developer, I want to use markup to structure my index.html page, so the layout is in the order of assembly I prefer, with effective use of the markup possibilities offered by HTML.
-          <br>As a developer, I want to carefully design my scripts, so I can understand how to organize and write my code to achieve my goals in interactivity.
-          <br>As a developer, I want to create a simple script for my index.html page using JavaScript, so that I can use the browser to send a response to the user.
-          <br>As a developer, I want to receive and use the user's name, so that the program is personalized to their experience.
-          <br>As a developer, I want to provide five questions to the user, so that they can guess the answers and get to know me.
-          <br>As a developer, I want to notify the user after each question, so they are aware whether they were correct or not in their answers.
-          <br>As a developer, I want to be able to debug my code by using well structured console messages.
-          <br>As a developer, I want to manage my code through an online version control system, so I have the ability to work with others, manage my revisions, and keep a thorough record of my progress.
-        </section>
-      </body>
-      </html>
+  <section>
+    <article>
+      <h2>A little bit about me</h2>
+      <p>My name is Calvin Hall. I would describe myself as a junior Java developer.
+        I've got about 9 years experience working with Java, since early middleschool.
+        I got into programming because of runescape bots. Back during all the botting rage,
+        I decided to try and make my own by piecing other mods together into a "frankenstein"
+        amalgamation of different code scraps.
+        I never really enjoyed web development, as I always thought it was more about making a pretty
+        design than solving actual issues.
+        <br><br>
+        <h3>Programming Languages I know (ordered by how well I think I know them):</h3>
+        <ul>
+          <li>Java</li>
+          <li>C</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+        <br><br>
+        <h3>Top 10 most evil companies (order by magnitude of evilness):</h3>
+        <ol>
+          <li>Mediacom</li>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Amazon</li>
+          <li>Google</li>
+          <li>Monsanto</li>
+          <li>Electronic Arts</li>
+          <li>Viacom</li>
+          <li>Disney</li>
+          <li>Walmart</li>
+        </ol>
+      </p>
+    </article>
+  </section>
+</body>
+</html>
